Run with last commit on main

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,10 @@ on:
       - 'main'
   pull_request:
 
+env:
+  ICCHECK_FROM: "main"
+  ICCHECK_TO: "HEAD"
+
 jobs:
   iccheck:
     name: Change Check
@@ -14,6 +18,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
-          go-version-file: ./go.mod
+          go-version: "1.22"
+      - name: Set different base commit on main branch
+        if: github.ref == 'refs/heads/main'
+        run: echo "ICCHECK_FROM=HEAD~" >> "$GITHUB_ENV"
       - run: go install github.com/salab/iccheck@latest
-      - run: iccheck
+      - run: iccheck --from "$ICCHECK_FROM" --to "$ICCHECK_TO"
